Fix news year overlap.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -44,7 +44,7 @@
     margin-bottom: 10px;
 }
 #news ul {
-    margin: -25px 0 0 75px;
+    margin: -25px 0 0 150px;
     padding: 0;
     padding-left: 10px;
     list-style-type: none;
